<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voo_origem"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingRight="15px"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/aeroportos"
                android:id="@+id/dropdown_origem"
                android:paddingBottom="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voo_destino"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingRight="15px"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/aeroportos"
                android:id="@+id/dropdown_destino"
                android:paddingBottom="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:text="@string/button1"
                android:onClick="consultarVoos"
                android:id="@+id/botao_enviar"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:text="@string/button2"
                android:onClick="consultarVoosMelhor"
                android:id="@+id/botao_enviar_melhor"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>